fix(star-rating): make bigger on mobile

--- a/src/components/core/styles/star-rating.scss
+++ b/src/components/core/styles/star-rating.scss
@@ -8,6 +8,19 @@
 }
 
 .rating > input { display: none; } 
+
+@media only screen and (min-width: 300px) and (max-width: 768px) {
+  .dynamic.rating > label:before {
+    font-size: 2.75em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1005px) {
+  .dynamic.rating > label:before {
+    font-size: 2.25em;
+  }
+}
+
 .rating > label:before { 
   margin: 5px;
   font-size: 1.25em;
